# EMSA

./: .gitignore  README.md
.github/workflows/: node.js.yml
emsa-backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  scripts.py
emsa-backend/src/: authorization.py  exceptions.py  main.py  scripts.py  settings.py
emsa-backend/src/cloud/: storage.py
emsa-backend/src/crud/: friend.py  group.py  media.py  tag.py  user.py  validators.py
emsa-backend/src/database/: models.py  schemas.py  session.py  settings.py
emsa-backend/src/routes/: contracts.py  group.py  health_check.py  media.py  user.py
emsa-backend/src/services/: preview_generator.py  tag_proposer.py
emsa-backend/src/tests/: conftest.py  test_authorization.py  test_example.py
emsa-backend/src/tests/cloud/: test_storage.py
emsa-backend/src/tests/crud/: test_group.py  test_media.py  test_tag.py  test_user.py
emsa-backend/src/tests/database/: test_schemas.py
emsa-backend/src/tests/routes/: test_group.py  test_media.py  test_user.py
emsa-backend/src/tests/services/: test_cloud_storage.py  test_preview_generator.py  test_tag_proposer.py
emsa-ui/: .dockerignore  .eslintrc.cjs  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json
emsa-ui/api-mock/: server.cjs
emsa-ui/src/: App.tsx
emsa-ui/src/components/: Account.tsx  AuthProvider.tsx  CustomRoutes.tsx  FriendRequests.tsx  GroupList.tsx  HomePage.tsx  ManageMemes.tsx  MembersList.tsx  MemeContainer.tsx  MemeGrid.tsx  SignIn.tsx  SignUp.tsx  Theme.ts  useAuth.ts
emsa-ui/src/tests/: CustomRoutes.test.tsx  SignIn.test.tsx  SignUp.test.tsx
