[tool.poetry]
name = "EMSA"
version = "0.1.0"
description = "FastAPI backend for web application"
authors = [
  "Radosław Szpot",
  "Igor Ratajczyk",
  "Bartosz Żak",
  "Dominik Żurek",
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
sqlalchemy = { version = "^1.4.50", extras = ["asyncio"] }
asyncpg = "^0.29"
psycopg2-binary = "^2.9.9"
databases = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
black = "^21.11"
flake8 = "^4.0"
isort = { version = "^5.10", extras = ["colors"] }
mypy = "^1.0.1"
pytest = "^7.2.1"
pytest-asyncio = "^0.18.3"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
