[tool.poetry]
name = "EMSA"
version = "0.1.0"
description = "FastAPI backend for EMSA"
authors = [
  "Radosław Szpot",
  "Igor Ratajczyk",
  "Bartosz Żak",
  "Dominik Żurek",
]

[tool.poetry.dependencies]
asyncpg = "^0.29"
fastapi = "^0.104.1"
httpx = "^0.25.2"
python = "^3.12"
psycopg2-binary = "^2.9.9"
pydantic = {version = "^2.5.2", extras = ["mypy", "email"]}
pydantic-settings = "^2.1.0"
sqlalchemy = { version = "^1.4.50", extras = ["asyncio", "mypy"] }
uvicorn = "^0.23.2"
werkzeug =  "^3.0.1"
aiohttp = "^3.9.1"
google-auth = "^2.25.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
black = "^23.11"
flake8 = "^6.1"
flake8-pyproject="^1.2.3"
isort = { version = "^5.12", extras = ["colors"] }
mypy = "^1.7.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--asyncio-mode=auto"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]